--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "isomorphic-fetch": "^3.0.0",
     "mongoose": "^6.3.2",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "serve-static": "^1.14.1",
