--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "fetch-intercept": "^2.4.0",
     "graphql": "^16.3.0",
     "isomorphic-fetch": "^3.0.0",
     "mongoose": "^6.3.2",
